# Emote

./: Makefile  meson.build
.github/workflows/: build.yml
emote/: __init__.py  css.py  emojis.py  guide.py  keybinding.py  keyboard_shortcuts.py  picker.py  settings.py
static/: style.css
