project('emote',
    version: '4.0.0',
    meson_version: '>= 0.50.0',
    default_options: [ 'warning_level=3', ],
)
# Warning levels: 0, 1, 2, 3
# dep = [
#     dependency('gio-2.0'),
#     dependency('gtk4'),
#     dependency('gtk4-wayland'),
#     dependency('gtk4-x11'),
# ]
i18n = import('i18n')

subdir('emote')
subdir('static')
subdir('flatpak')
